# xiaolongbaoblog

./: .gitignore  Cargo.toml  _config.yml  config.toml  go.mod  go.sum  main.go  remotegithub.sh  remotescp.sh  remotescp2.sh
cmd/: deploy.go  generate.go  root.go  serve.go
pkg/config/: config.go
pkg/deploy/: deploy.go
pkg/site/: about.go  blog.go  index_now.go  output.go  site.go
pkg/site/tpl/: about.tpl  index.tpl  post.tpl  series.tpl
source/: robots.txt
source/about/: index.md
source/posts/: -ac-odyssey0.md  -ginkgo-label-en-tutorial.md  -grafana-k6-1.md  -robotframework-new-tutorial-creating-test-data.md  ac-odyssey0.md  accept-interface-return-struct-in-go.md  asyncfileread01.md  asyncio-goroutine.md  bilibili-danmu01.md  bilibili-danmu02.md  bilibili-users-spider.md  bittorrent-one-small-step.md  bittorrent-summary.md  cdcfan-auto-order.md  chuizi-dingzi.md  deadlock-between-processes.md  dht-sniffer.md  dht01.md  diary3.md  diary5.md  diary6.md  diary7.md  diary8.md  elixir-beginner-0.md  elixir-beginner-1.md  exif-hack.md  exif-info-extract1.md  from-rust-to-go.md  ginkgo-concurrency-test.md  ginkgo-label-en-tutorial.md  ginkgo-label-tutorial.md  go-concurrency-pattern-context.md  go-gc.md  go-interface-struct-check.md  go-json-v2.md  go-memory-model.md  go-testing-in-go-subtests.md  go-testing-synctest.md  go-the-principles-versioning-in-go.md  go-unit-test-comments.md  (+60 more)
source/posts/Grafana k6 登堂入室/: grafana-k6-0.md  grafana-k6-1.md  grafana-k6-4.md  grafana-k6-5.md  grafana-k6-6.md
src/: blog.rs  config.rs  generate.rs  main.rs  site.rs  tpl.rs
(+20 files in other folders)
