[package]
name = "xiaolongbaoblog"
version = "0.1.0"
authors = ["lyyyuna <lyyyuna@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
colored = "2"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
