[package]
name = "xiaolongbaoblog"
version = "0.1.0"
authors = ["lyyyuna <lyyyuna@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
colored = "2"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
serde_yaml = "0.8"
url = "2.2.2"
pulldown-cmark = "0.8.0"
tinytemplate = "1"